--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "fcc-learn-node-with-express",
   "author": "ezeiru emma",
-	"description": "a tutorial to node js",
-	"keywords": ["freecodecamp", "fun", "consistent"],
-	"license": "MIT",
+  "description": "a tutorial to node js",
+  "keywords": [
+    "freecodecamp",
+    "fun",
+    "consistent"
+  ],
+  "license": "MIT",
   "version": "0.1.0",
   "dependencies": {
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.3",
-    "dotenv": "^16.0.1",
-    "express": "^4.14.0",
-    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git",
+    "nodemon": "^3.1.0"
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node --watch server.js"
   }
 }
